--- a/templates/courses.html
+++ b/templates/courses.html
@@ -6,5 +6,22 @@
 {% endblock %}
 
 {% block body_block %}
-    <h2>Courses</h2>
+    <div class="content">
+        <table>
+            <tr>
+                <th>name</th>
+                <th>code</th>
+            </tr>
+            {% if courses_data %}
+                {% for course in courses_data %}
+                    <tr>
+                        <td>{{ course.course_name }}</td>
+                        <td>{{ course.course_code }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <strong>No courses! :( </strong>
+            {% endif %}
+        </table>
+    </div>
 {% endblock %}
