--- a/templates/users.html
+++ b/templates/users.html
@@ -42,7 +42,7 @@
                         </tr>
                     {% endfor %}
                 {% else %}
-                    <strong>No users! :( </strong>
+                    <tr><td>No users! :( </td></tr>
                 {% endif %}
             </table>
             <div class ="pagination">
